# simple_image_server

./: README.md  app.py  app.wsgi  constant.py  media.py  pyproject.toml  utils.py
react-client/: package-lock.json  package.json
react-client/src/: App.css  App.tsx  Upload.tsx
