[tool.poetry]
name = "simple-image-server"
version = "0.1.0"
description = ""
authors = ["Julien Dubost <julien.dubost@planny.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
